--- a/Carthage Sample/iOS-sample-app/Base.lproj/Main.storyboard
+++ b/Carthage Sample/iOS-sample-app/Base.lproj/Main.storyboard
@@ -429,7 +429,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cslogo" translatesAutoresizingMaskIntoConstraints="NO" id="FX9-Jz-p5n">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cslogo" highlightedImage="cslogo" translatesAutoresizingMaskIntoConstraints="NO" id="FX9-Jz-p5n">
                                 <rect key="frame" x="143" y="470" width="128" height="106"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
