--- a/Carthage Sample/iOS-sample-app/Base.lproj/Main.storyboard
+++ b/Carthage Sample/iOS-sample-app/Base.lproj/Main.storyboard
@@ -429,7 +429,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cslogo" highlightedImage="cslogo" translatesAutoresizingMaskIntoConstraints="NO" id="FX9-Jz-p5n">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cs-logo" highlightedImage="cs-logo" translatesAutoresizingMaskIntoConstraints="NO" id="FX9-Jz-p5n">
                                 <rect key="frame" x="143" y="470" width="128" height="106"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -448,7 +448,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cslogo" width="100" height="103.5"/>
+        <image name="cs-logo" width="70" height="73"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
